2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/*.{cc,h}: Update copyright notice:  The postal address of
	the Free Software Foundation changed, and my email address too.
	Also, remove the statement I had inserted which explicitely
	disallowed using a later version of the license.  I think I do
	not have to ask for permission from contributors, since the
	copyright notice only mentions me as the copyright holder, so
	technically everyone automatically transferred her copyright
	to me.  Anyway, the change is utterly minor and the notice now
	matches what everyone else is using.
	Also use the opportunity to get rid of the version control
	substitutions and the trailing empty line in every file.
	* ui/aboutdialog.glade: Update my email address.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* Makefile.am (src_regexxer_LDADD): Replace $(LIBINTL) substitution
	with $(INTLLIBS).  Apparently AM_GLIB_GNU_GETTEXT(), unlike plain
	AM_GNU_GETTEXT(), assigns INTLLIBS instead of LIBINTL for whatever
	reason.  This difference is nowhere documented.  Funny noone has
	noticed this yet, since as far as I can tell it is empty only with
	GNU libc.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* autogen.sh: Reduce the list of cruft to delete; it was a bit over
	the top and too long to maintain anyway.  Also, remove colons from
	substitutions again, as the script no longer assigns the empty
	string anywhere to the variables in question.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* autogen.sh: Comment "set -ex" and remove pointless ":;".

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* autogen.sh: Further simplify the script by making use of set -e
	and colons in substitutions, like ${foo:-bar}.  Although some truly
	ancient shells do not provide these features, this does not matter
	much for scripts intended for maintainer use.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>
