@@ -1,5 +1,11 @@
 2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>
 
+	* src/miscutils.cc: Remove file, as it was essentially empty
+	except for including miscutils.h.
+	* Makefile.am (src_regexxer_SOURCES): Remove src/miscutils.cc.
+
+2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>
+
 	* src/*.{cc,h}: Update copyright notice:  The postal address of
 	the Free Software Foundation changed, and my email address too.
 	Also, remove the statement I had inserted which explicitely
